<resources>
    <string name="app_name" translatable="false">Steel Drum Remote</string>
    <string name="title_activity_main">Home</string>
    <string name="connect_to_device">Connect to controller</string>
    <string name="title_activity_device_select">Select a device</string>
    <string name="loading">Loading...</string>
    <string name="scan_in_progress">Scanning for devices...</string>
    <string name="title_activity_remote">Remote</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="preference_show_all_devices">Show unnamed bluetooth devices</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="about">About</string>
    <string name="app_version" translatable="false">v1.0</string>
    <string name="copyright">Developped by Alexis Brandner and Camille Raynaud</string>
    <string name="see_on_github">See on GitHub</string>
    <string name="keyboard">Keyboard</string>
    <string name="play_recording">Play a melody</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
</resources>